fixed overflow

--- a/index.css
+++ b/index.css
@@ -1,43 +1,48 @@
-body{
-    margin: 0px;
+body {
+  margin: 0px;
 }
-#controls{
-    position: sticky;
-    top:0;
+
+#controls {
+  position: sticky;
+  top: 0;
 }
-h2{
-    margin:0;
+h2 {
+  margin: 0;
 }
 table {
-    text-align: left;
-    vertical-align: middle;
-    position: relative;
-    border-collapse: collapse; 
-    font-family: 'Montserrat', sans-serif;
-    position:sticky;
-    top:0;
-  }
-  th, td {
-      border: 1px solid grey;
-      width: 5vw;
-      height: 5vw;
-    }
-    th {
-    background-color: grey;
-    position: sticky;
-    top: 0%;  /*Don't forget this, required for the stickiness */
-  }
-.tabHeader{
-    color:white;
-    /*background-size: cover;*/
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
+  text-align: left;
+  vertical-align: middle;
+  position: relative;
+  border-collapse: collapse;
+  font-family: "Montserrat", sans-serif;
+  /*position: sticky;*/
+  top: 0;
 }
-.derechosHeader{
-    width: 15vw;
+th,
+td {
+  border: 1px solid grey;
+  width: 5vw;
+  height: 5vw;
 }
-.emptyCell{
-    text-align: center;
-    cursor:pointer;
+th {
+  background-color: grey;
+  position: sticky;
+  top: 0%; /*Don't forget this, required for the stickiness */
+}
+.tabHeader {
+  color: white;
+  /*background-size: cover;*/
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.derechosHeader {
+  width: 15vw;
+}
+.emptyCell {
+  text-align: center;
+  cursor: pointer;
+}
+.tab {
+  overflow: hidden;
 }
